change the title of the page and add some image

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title><img src="icon.svg" alt="Website Icon" class="site-icon"></i> <%= listTitle %></title>
+  <img src="icon.svg" alt="Website Icon" class="site-icon"></i>
+  <title> <%= listTitle %></title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
