--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <img src="icon.svg" alt="Website Icon" class="site-icon"></i>
+  <link rel="icon" href="icon.svg" type="image/svg+xml">
   <title> <%= listTitle %></title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
